# taskNerve

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUGIT_WORKFLOW.md  GOVERNANCE.md  README.md  SECURITY.md  TASKNERVE_WORKFLOW.md  build.rs  contributing ideas.md  install-linux.sh  install-macos.sh  install-windows.ps1  install.sh  levers_pitfalls.md  main.js  project_goals.md  project_manifest.md  research.md  skills-page-DeBxXSaK.js  tasknerve-codex-panel.js
.github/: PULL_REQUEST_TEMPLATE.md
codex-native/: README.md  index-CMu6BCpo.js  index.html  main.js  package-lock.json  package.json  tasknerve-settings-native.js  tsconfig.build.json  tsconfig.json
deprecated/: README.md
docs/: codex_native_cutover_audit.md  codex_native_integration_plan.md  codex_native_integration_surface.md  codex_native_style_contract.md
githooks/: post-checkout  post-commit  post-merge  post-rewrite  pre-push
scripts/: annotate-clippy-log.py  auto-install-dev.sh  build-codex-tasknerve-app.sh  clean-target-retention.sh  codex-update-interceptor.py  deploy-installed-app-from-canonical-build.sh  deploy-live-extract-to-installed-app.sh  deploy-tasknerve-from-source.sh  enforce-single-runtime-extract.sh  fugit-gui  install-dev-hooks.sh  install-tasknerve-update-daemon.sh  install-unix.sh  install.sh  install_codex_skill.sh  public-release-check.sh  publish-shared-skill.sh  tasknerve-approve-phase2-update.py  tasknerve-gui  tasknerve-update-daemon-status.sh  uninstall-tasknerve-update-daemon.sh  vigorous-e2e.sh
src/: main.rs
(+104 files in other folders)
