[package]
name = "fugit-alpha"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fugit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
uuid = { version = "1.8", features = ["v4", "serde"] }
walkdir = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
